--- a/Trabalho1/Dados/Construção Data.ipynb
+++ b/Trabalho1/Dados/Construção Data.ipynb
@@ -1021,14 +1021,14 @@
       "---  ------      --------------  -----  \n",
       " 0   country     175 non-null    object \n",
       " 1   region      175 non-null    object \n",
-      " 2   CPI         175 non-null    int64  \n",
+      " 2   CPI         175 non-null    float64\n",
       " 3   IDH         174 non-null    float64\n",
       " 4   ano         175 non-null    int64  \n",
       " 5   Texto       175 non-null    object \n",
       " 6   line        175 non-null    object \n",
       " 7   continent   175 non-null    object \n",
       " 8   sub_region  175 non-null    object \n",
-      "dtypes: float64(1), int64(2), object(6)\n",
+      "dtypes: float64(2), int64(1), object(6)\n",
       "memory usage: 13.7+ KB\n"
      ]
     }
@@ -1038,6 +1038,7 @@
     "                idh[['Country','2019']].rename(columns={'Country':'country','2019':'IDH'}),\n",
     "                how='inner',on = 'country')\n",
     "df2019['ano']=2019\n",
+    "df2019['CPI']= df2019['CPI']/10\n",
     "df2019['Texto']=''\n",
     "df2019['line'] = 'line'\n",
     "df2019['IDH']=pd.to_numeric(df2019['IDH'])\n",
@@ -1047,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "b424f868",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1057,7 @@
      "output_type": "stream",
      "text": [
       "      country region  CPI  IDH   ano Texto  line continent    sub_region\n",
-      "15  Hong Kong     AP   76  NaN  2019        line      Asia  Eastern Asia\n"
+      "15  Hong Kong     AP  7.6  NaN  2019        line      Asia  Eastern Asia\n"
      ]
     }
    ],
@@ -1068,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "071d8c83",
    "metadata": {},
    "outputs": [
@@ -1083,14 +1084,14 @@
       "---  ------      --------------  -----  \n",
       " 0   country     174 non-null    object \n",
       " 1   region      174 non-null    object \n",
-      " 2   CPI         174 non-null    int64  \n",
+      " 2   CPI         174 non-null    float64\n",
       " 3   IDH         174 non-null    float64\n",
       " 4   ano         174 non-null    int64  \n",
       " 5   Texto       174 non-null    object \n",
       " 6   line        174 non-null    object \n",
       " 7   continent   174 non-null    object \n",
       " 8   sub_region  174 non-null    object \n",
-      "dtypes: float64(1), int64(2), object(6)\n",
+      "dtypes: float64(2), int64(1), object(6)\n",
       "memory usage: 13.6+ KB\n"
      ]
     }
@@ -1109,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "d5fbef5f",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1241,7 @@
        "[168 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "7e270019",
    "metadata": {},
    "outputs": [],
@@ -1263,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "bb90adf6",
    "metadata": {},
    "outputs": [
@@ -1278,14 +1279,14 @@
       "---  ------      --------------  -----  \n",
       " 0   country     163 non-null    object \n",
       " 1   region      163 non-null    object \n",
-      " 2   CPI         163 non-null    int64  \n",
+      " 2   CPI         163 non-null    float64\n",
       " 3   IDH         162 non-null    float64\n",
       " 4   ano         163 non-null    int64  \n",
       " 5   Texto       163 non-null    object \n",
       " 6   line        163 non-null    object \n",
       " 7   continent   163 non-null    object \n",
       " 8   sub_region  163 non-null    object \n",
-      "dtypes: float64(1), int64(2), object(6)\n",
+      "dtypes: float64(2), int64(1), object(6)\n",
       "memory usage: 12.7+ KB\n"
      ]
     }
@@ -1297,6 +1298,7 @@
     "df2015['ano']=2015\n",
     "df2015['Texto']=''\n",
     "df2015['line'] = 'line'\n",
+    "df2015['CPI']= df2015['CPI']/10\n",
     "df2015['IDH'] = pd.to_numeric(df2015['IDH'])\n",
     "df2015 = pd.merge(df2015, continent, how = 'inner', on = 'country')\n",
     "df2015.info()"
@@ -1304,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "f50ea7ac",
    "metadata": {},
    "outputs": [
@@ -1313,7 +1315,7 @@
      "output_type": "stream",
      "text": [
       "      country region  CPI  IDH   ano Texto  line continent    sub_region\n",
-      "17  Hong Kong     AP   75  NaN  2015        line      Asia  Eastern Asia\n"
+      "17  Hong Kong     AP  7.5  NaN  2015        line      Asia  Eastern Asia\n"
      ]
     }
    ],
@@ -1325,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "52309898",
    "metadata": {},
    "outputs": [
@@ -1340,14 +1342,14 @@
       "---  ------      --------------  -----  \n",
       " 0   country     162 non-null    object \n",
       " 1   region      162 non-null    object \n",
-      " 2   CPI         162 non-null    int64  \n",
+      " 2   CPI         162 non-null    float64\n",
       " 3   IDH         162 non-null    float64\n",
       " 4   ano         162 non-null    int64  \n",
       " 5   Texto       162 non-null    object \n",
       " 6   line        162 non-null    object \n",
       " 7   continent   162 non-null    object \n",
       " 8   sub_region  162 non-null    object \n",
-      "dtypes: float64(1), int64(2), object(6)\n",
+      "dtypes: float64(2), int64(1), object(6)\n",
       "memory usage: 12.7+ KB\n"
      ]
     }
@@ -1366,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "aaf81c56",
    "metadata": {},
    "outputs": [
@@ -1485,7 +1487,7 @@
        "[177 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "3adf690c",
    "metadata": {},
    "outputs": [],
@@ -1508,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "44fe9dfe",
    "metadata": {},
    "outputs": [
@@ -1523,14 +1525,14 @@
       "---  ------      --------------  -----  \n",
       " 0   country     172 non-null    object \n",
       " 1   region      172 non-null    object \n",
-      " 2   CPI         172 non-null    int64  \n",
+      " 2   CPI         172 non-null    float64\n",
       " 3   IDH         171 non-null    float64\n",
       " 4   ano         172 non-null    int64  \n",
       " 5   Texto       172 non-null    object \n",
       " 6   line        172 non-null    object \n",
       " 7   continent   172 non-null    object \n",
       " 8   sub_region  172 non-null    object \n",
-      "dtypes: float64(1), int64(2), object(6)\n",
+      "dtypes: float64(2), int64(1), object(6)\n",
       "memory usage: 13.4+ KB\n"
      ]
     }
@@ -1542,6 +1544,7 @@
     "df2013['ano']=2013\n",
     "df2013['Texto']=''\n",
     "df2013['line'] = 'line'\n",
+    "df2013['CPI']= df2013['CPI']/10\n",
     "df2013['IDH'] = pd.to_numeric(df2013['IDH'])\n",
     "df2013 = pd.merge(df2013, continent, how = 'inner', on = 'country')\n",
     "df2013.info()"
@@ -1549,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "066beac1",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1561,7 @@
      "output_type": "stream",
      "text": [
       "      country region  CPI  IDH   ano Texto  line continent    sub_region\n",
-      "16  Hong Kong     AP   75  NaN  2013        line      Asia  Eastern Asia\n"
+      "16  Hong Kong     AP  7.5  NaN  2013        line      Asia  Eastern Asia\n"
      ]
     }
    ],
